# ATRACT

./: .gitignore  ANALYSIS_DECISIONS.md  CHANGELOG.md  CITATION.cff  LICENSE  Makefile  README.md  REPRODUCIBILITY.md  REVIEWER_DIAGNOSTICS.md  pyproject.toml  requirements-lock.txt
data/public/: README.md
metadata/: anonymization_spec.md  dagitty_model.txt  public_data_dictionary.csv
results/model_summaries/: analysis_metadata.json  binary_balance_diagnostics.csv  binary_comparison_results.csv  manuscript_results_manifest.csv  matched_pair_diagnostics.csv  patient_multiplicity_private_summary.csv  primary_binary_results.csv  primary_speed_results.csv  propensity_coefficients.csv  speed_bootstrap_results.csv  speed_contemporary_rematching_grid.csv  speed_matching_grid.csv  speed_robustness_results.csv  speed_temporal_relaxation_grid.csv  speed_temporal_rematching_grid.csv  speed_temporal_sensitivity.csv
results/tables/: table_1_baseline.csv  table_2_main_results.csv  table_s10_operator_year_distribution.csv  table_s11_operator_adoption.csv  table_s12_matched_characteristics.csv  table_s13_unmatched_profile.csv  table_s14_missingness_by_group.csv  table_s1_balance.csv  table_s3_secondary_comparison.csv  table_s4_missingness.csv  table_s5_population_accounting.csv  table_s9_speed_continuous_size.csv
src/atract_analysis/: __main__.py  anonymize.py  checks.py  cohort.py  config.py  figures.py  ingest.py  models.py  private_diagnostics.py  tables.py
tests/: test_public_release.py
