[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atract-analysis"
version = "0.1.0"
description = "Public deidentified statistical analysis pipeline for the ATRACT colorectal ESD cohort."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "matplotlib>=3.9",
  "numpy>=2.0",
  "openpyxl>=3.1",
  "pandas>=2.3",
  "scipy>=1.13",
  "statsmodels>=0.14",
]

[project.scripts]
atract-analysis = "atract_analysis.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

